--- a/MyDbtDiaryCard/MyDbtDiaryCard/Resx/DbtSkillsResources.resx
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/Resx/DbtSkillsResources.resx
@@ -154,7 +154,7 @@
     <value>PLEASE</value>
   </data>
   <data name="E_ProblemSloving" xml:space="preserve">
-    <value>Promlrm sloving</value>
+    <value>Problem sloving</value>
   </data>
   <data name="Module_DistressTolerance" xml:space="preserve">
     <value>Distress Tolerance</value>
