--- a/MyDbtDiaryCard/MyDbtDiaryCard/Resx/ViewResources.resx
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/Resx/ViewResources.resx
@@ -126,6 +126,15 @@
   <data name="Alert_DayFromFuture" xml:space="preserve">
     <value>That day has not come yet</value>
   </data>
+  <data name="Alert_Deleted" xml:space="preserve">
+    <value>Entrie deleted</value>
+  </data>
+  <data name="Alert_DeleteQuestion" xml:space="preserve">
+    <value>Are you really want to delete this entry?</value>
+  </data>
+  <data name="Alert_Saved" xml:space="preserve">
+    <value>Entry Saved :) Go on, champion! </value>
+  </data>
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
@@ -167,5 +176,8 @@
   </data>
   <data name="TableOverviewPageTitle" xml:space="preserve">
     <value>Champion's Card!</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Yep</value>
   </data>
 </root>
