--- a/MyDbtDiaryCard/MyDbtDiaryCard/Resx/EntryResources.ru.resx
+++ b/MyDbtDiaryCard/MyDbtDiaryCard/Resx/EntryResources.ru.resx
@@ -190,7 +190,7 @@
     <value>6 - Использовал(а) навык не стараясь (автоматически), они не помогли</value>
   </data>
   <data name="Usefulness_7" xml:space="preserve">
-    <value>7 - Использовал(а) навык не стараясь (автоматически), они не помогли</value>
+    <value>7 - Использовал(а) навык не стараясь (автоматически), они помогли</value>
   </data>
   <data name="U_Alcohol" xml:space="preserve">
     <value>Алкоголь</value>
